@@ -13,10 +13,10 @@ package es.org.cxn.backapp.test.unit.controller;
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -48,9 +48,8 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
@@ -71,7 +70,6 @@ import es.org.cxn.backapp.service.exceptions.ChessQuestionServiceException;
 import es.org.cxn.backapp.test.utils.LocalDateTimeAdapter;
 
 @WebMvcTest(ChessQuestionsController.class)
-@Import(TestSecurityConfiguration.class)
 @AutoConfigureMockMvc(addFilters = false)
 class ChessQuestionsControllerTest {
 
@@ -93,7 +91,7 @@ class ChessQuestionsControllerTest {
      * service during testing, without invoking the actual service layer logic.
      * </p>
      */
-    @MockBean
+    @MockitoBean
     private ChessQuestionsService chessQuestionsService;
 
     /**
@@ -115,7 +113,7 @@ class ChessQuestionsControllerTest {
      * may be required for security-related operations in the controller.
      * </p>
      */
-    @MockBean
+    @MockitoBean
     private DefaultJwtUtils jwtUtils;
 
     @Test
@@ -262,7 +260,7 @@ class ChessQuestionsControllerTest {
 
         Assertions.assertEquals(2, chessQuestionsList.size(), "list should have 2 questions.");
 
-        var firstElement = chessQuestionsList.get(0);
+        var firstElement = chessQuestionsList.getFirst();
         var secondElement = chessQuestionsList.get(1);
 
         Assertions.assertEquals("Topic1", firstElement.topic(), "first element topic");
